<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marco.appestudante.verCreditos">

    <ImageView
        android:id="@+id/imageView_fundo"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/fundo" />

    <ImageView
        android:id="@+id/imageView_creditos"
        android:layout_width="154dp"
        android:layout_height="210dp"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/creditos" />

    <ImageView
        android:id="@+id/imageView_logo_uma"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_fundo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/logo_uma" />

    <TextView
        android:id="@+id/textView_dev_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/dev_name_1"
        app:layout_constraintBottom_toTopOf="@+id/textView_dev_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView_dev_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/dev_name_2"
        app:layout_constraintBottom_toTopOf="@+id/textView_dev_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView_dev_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/dev_name_3"
        app:layout_constraintBottom_toTopOf="@+id/textView_dev_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView_dev_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/dev_name_4"
        app:layout_constraintBottom_toTopOf="@+id/imageView_logo_uma"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
