<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marco.appestudante.Definicoes">

    <Switch
        android:id="@+id/switch_dark_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/dark_mode"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_titulo_definicoes" />

    <Switch
        android:id="@+id/switch_notifications"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/notifications"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_dark_mode" />

    <ImageView
        android:id="@+id/imageView_fundo"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:contentDescription="@string/app_name_spaced"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/fundo" />

    <Button
        android:id="@+id/creditos"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:onClick="mostrarCreditos"
        android:text="@string/creditos"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBottom_toTopOf="@+id/imageView_fundo"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RelativeLayout
        android:id="@+id/RelativeLayout_report_bug"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/creditos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/imageView_bug"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/bug"
            android:contentDescription="@string/app_name_spaced" />

        <Button
            android:id="@+id/report_bug"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:onClick="reportarBug"
            android:text="@string/report_bug"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_sugestoes"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/RelativeLayout_report_bug"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/sugestoes"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@android:color/transparent"
            android:onClick="enviarSugestao"
            android:text="@string/sugestoes"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintHorizontal_bias="0.469"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="334dp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/imageView_lampada"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/sugestao"
            android:contentDescription="@string/app_name_spaced" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_classificar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/RelativeLayout_sugestoes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/imageView_estrela"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/classificar"
            android:contentDescription="@string/app_name_spaced" />

        <Button
            android:id="@+id/classificar"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:onClick="classificar"
            android:text="@string/classificar"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView_titulo_definicoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:text="@string/definicoes"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
