<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marco.appestudante.adicionarEvento">

    <TextView
        android:id="@+id/textView_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:text="@string/titulo_adicionar_evento"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_disciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/disciplina_evento"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_titulo" />

    <TextView
        android:id="@+id/textView_nome_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/nome_evento"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_disciplina" />

    <Button
        android:id="@+id/button_inserir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="adicionar"
        android:text="@string/titulo_adicionar_evento"
        app:layout_constraintBottom_toTopOf="@+id/imageView_fundo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView_fundo"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/fundo" />

    <EditText
        android:id="@+id/editText_nome_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView_nome_evento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_nome_evento" />

    <Button
        android:id="@+id/button_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:onClick="showTimePicker"
        android:text="@string/hora"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_data" />

    <Button
        android:id="@+id/button_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:onClick="showDatePicker"
        android:text="@string/data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nome_evento" />

    <TextView
        android:id="@+id/textView_mostrar_hora"
        android:layout_width="212dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_hora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_hora" />

    <TextView
        android:id="@+id/textView_mostrar_data"
        android:layout_width="212dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_data" />

    <Spinner
        android:id="@+id/spinner_disciplinas"
        android:layout_width="161dp"
        android:layout_height="43dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_disciplina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_disciplina"
        app:layout_constraintVertical_bias="0.421" />

</android.support.constraint.ConstraintLayout>
